2004-07-22  Nick Clifton  <nickc@redhat.com>

	PR/280
	* gas/h8300/ffxx1-coff.d: Remove duplicated raw insn values.
	* gas/h8300/ffxx1-elf.d: Likewise.
	* gas/h8300/h8sx_disp2.d: Likewise.
	* gas/h8300/h8sx_mov_imm.d: Likewise.
	* gas/h8300/h8sx_rtsl.d: Likewise.	
	* gas/h8300/ffxx1-coff.s: Remove inappropriate insn width specifier.
	* gas/h8300/ffxx1-elf.s: Likewise.

2004-07-21  Jan Beulich <jbeulich@novell.com>

	* gas/i386/x86-64-addr32.[ds]: New test for x86-64 32-bit
	addressing in 64-bit mode.
	* gas/i386/x86-64-rip.[ds]: New test for x86-64 rip-relative
	addressing.
	* gas/i386/i386.exp: Run the two new tests.

	* gas/cfi/cfi-x86_64.d: Adjust expectation for leave to	not have a
	rex prefix.
	* gas/i386/x86-64-inval.[ls]: Add a bunch of instructions illegal
	in 64-bit mode.
	
2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/elf-rel19.d: Pass -march=mips1 to gas as the test
	expects load delay slots.

2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/vr5400.d: Update for a correct disassembly of
	"racm.ob".

2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/mips32.s: Adjust for the unified "break" syntax.  Add
	another "break" case.  Update the comment accordingly.
	* gas/mips/set-arch.s: Likewise.
	* gas/mips/mips32.d: Adjust for the new output.
	* gas/mips/set-arch.d: Likewise.

2004-07-15  Nitin Yewale <nitiny@kpitcummins.com>

	* gas/h8300/h8300.exp (do_h8300hn_addressgen): Addition of
	new test case for H8300H normal target to check symbol
	address generation.
	* gas/h8300/symaddgen.s: New test.

2004-07-13  Nick Clifton  <nickc@redhat.com>

	* gas/i386/intel.s: Add test of newly expand arithmetic support
	for Intel mode assembler.
	* gas/i386/intel.d: Add expected disassmbly.

2004-07-13  Nick Clifton  <nickc@redhat.com>

	* gas/vtable: Delete directory.  These tests are no longer needed
	as the VTABLE_ reloc support is obsolete.

2004-07-08  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
