@@ -1,3 +1,7 @@
+2004-07-22  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* gas/i386/x86-64-inval.l: Remove the leading `+'.
+
 2004-07-22  Nick Clifton  <nickc@redhat.com>
 
 	PR/280
